# notebooktester

./: .gitignore  .lefthook.yml  README.md  main.py  pyproject.toml
src/notebooktester/: cli.py  main.py
tests/: conftest.py  test_notebook_cleanup.py  test_notebooktester.py
tests/helpers/: notebook_creator.py
