[project]
name = "notebooktester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "raoul grouls", email = "Raoul.Grouls@han.nl" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "tqdm>=4.67.1",
]

[project.scripts]
notebooktester = "notebooktester.cli:main"

[tools.urls]
GitHub = "https://github.com/raoulg/notebooktester"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
