[project]
name = "notebooktester"
version = "0.2.1"
description = "A simple linting tool to check if all notebooks execute"
readme = "README.md"
authors = [
    { name = "raoul grouls", email = "Raoul.Grouls@han.nl" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "tqdm>=4.67.1",
]

[project.scripts]
notebooktester = "notebooktester.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "ray[tune]>=2.42.0",
]

[tools.urls]
GitHub = "https://github.com/raoulg/notebooktester"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.6.11",
    "isort>=6.0.0",
    "pyright>=1.1.393",
    "ruff>=0.9.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning:jupyter_client.*"
]
